# personal-ai-job-assistant

./: .env.example  .eslintignore  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  CHANGELOG.md  CONTRIBUTING.md  FUNCTIONAL_REQUIREMENTS.md  GEMINI_SETUP.md  ISSUE_RESUME_MANAGEMENT.md  LICENSE  NON_FUNCTIONAL_REQUIREMENTS.md  PR_DESCRIPTION.md  PR_DESCRIPTION_ISSUE_56.md  PYTEST_INSTRUCTIONS.md  README.md  REQUIREMENTS.md  ROADMAP.md  SECURITY.md  VPS_EXECUTION_GUIDE.md  fix_type_hints.py
src/backend/: .coveragerc  .env.ai.example  README.md  README_TESTING.md  alembic.ini  generate_password_hash.py  pyproject.toml  pytest.ini
src/backend/alembic/: env.py
src/backend/app/: __init__.py  config.py  db.py  main.py
src/backend/app/api/: deps.py
src/backend/app/core/: ai_exceptions.py  ai_provider.py  deps.py  error_handlers.py  exceptions.py  logging.py  middleware.py  security.py
src/backend/app/models/: __init__.py  analytics.py  application.py  base.py  cover_letter.py  credential.py  email.py  job.py  prompt.py  resume.py  user.py
src/backend/app/providers/: __init__.py  gemini_provider.py  openai_provider.py
src/backend/app/schemas/: __init__.py  analytics.py  application.py  auth.py  base.py  cover_letter.py  credential.py  email.py  job.py  prompt.py  resume.py  search.py  user.py
src/backend/app/services/: ai_cover_letter_service.py  ai_resume_tailoring_service.py  analytics_service.py  application_service.py  cost_tracking_service.py  job_service.py  (+4 more)
src/backend/database/: init_db.py  schema.sql
src/backend/docs/: API_ENDPOINTS.md  DEVELOPMENT.md
src/backend/scripts/: create_migration.sh  create_test_db_manual.sh  grant_test_db_permissions.sh  reset_db.sh  run_migration.sh  run_server.ps1  run_server.sh  setup_env.ps1  setup_env.sh  setup_test_db.py  setup_test_db.sh  test_config.py
src/backend/tests/: __init__.py  conftest.py  test_auth_endpoints.py  test_auth_security.py  test_config.py  test_database.py  test_error_handlers.py  test_exceptions.py  test_health.py  test_middleware.py  test_models.py  test_resume_phase1.py  test_resume_phase2.py  test_resume_phase3.py  test_resume_phase4.py  test_schemas_import.py  test_schemas_job.py  test_schemas_resume.py  test_schemas_user.py  utils.py
(+122 files in other folders)
